<resources>
    <!-- MainActivity.java Class Strings -->
    <string name="app_name">RPS X</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_text_link">Not a user? Sign Up Here!</string>
    <string name="forgot_password_text_link">Forgot Password?</string>

    <!-- Signup.java Class Strings -->
    <string name="firstname">Enter First Name</string>
    <string name="lastname">Enter Last Name</string>
    <string name="username">Enter Username</string>
    <string name="displayname">Enter Display Name</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="SignUp_Button">Sign Up</string>
    <string name="Cancel_Button">Cancel</string>
    <string name="enter_email">Enter E-mail</string>

    <!-- Menu.java Class Strings -->
    <string name="play">Play</string>
    <string name="leader_board">Leader Board</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- ForgotPassword.java Class Strings -->
    <string name="send_password">Send Credentials</string>
    <string name="back">Back</string>

    <!-- activity_enter_room.java Class Strings -->
    <string name="enter">Enter Room</string>

    <!-- LeaderBoard.java Class Strings -->
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="display_names">Display Name</string>

    <!-- Settings.java Class Strings -->
    <string name="sound">Enable Sound</string>
    <string name="accountLink"><a href="http://www.google.com">Change Account Info</a></string>
    <string name="report"><a href="http://www.facebook.com">Change Account Info</a></string>

    <!-- CreateRoom.java Class Strings -->
    <string name="create">Create Room</string>

    <!-- Game.java Class Strings -->
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissor">Scissor</string>
    <string name="send">Confirm</string>
    <string name="host">Host</string>
    <string name="guest">Guest</string>
    <string name="finish">End Game</string>



</resources>
