<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/leaderBoardButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="216dp"
                android:background="@android:color/background_dark"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openLeaderBoard"
                android:contentDescription="@string/leader_board"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/openRPSX"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/leaderboard" />

            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"
                android:contentDescription="@string/settings"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openSettings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/openRPSX"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/settings" />

            <ImageView
                android:id="@+id/exitButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"
                android:clickable="true"
                android:contentDescription="@string/exit"
                android:focusable="true"
                android:onClick="exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settingsButton"
                app:layout_constraintTop_toBottomOf="@+id/leaderBoardButton"
                app:srcCompat="@drawable/exit" />

            <ImageView
                android:id="@+id/openRPSX"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="216dp"
                android:background="@android:color/background_dark"
                android:contentDescription="@string/play"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openNewSession"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rps_x" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="304dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="215dp"
                android:layout_height="27dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="TextView"
                android:textAllCaps="false"
                android:textColor="?attr/actionModeSplitBackground"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayName"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>